<resources>
    <string name="app_name">Heliographapp</string>
    <string name="but_set_txt">Settings</string>
    <string name="but_map_txt">Map</string>
    <string name="device_txt">Device</string>
    <string name="SuperCapV_txt">SuperCapV</string>
    <string name="SolarV_txt">SolarV</string>
    <string name="latlong_txt">Lat / Long</string>
    <string name="waypont_txt">Waypoint</string>
    <string name="update_txt">UPDATE</string>
    <string name="nullValue"></string>

    <string name="rationale_location">This app needs access to your location to know where you are.</string>
    <string name="location">Location</string>
</resources>